--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,65 +25,65 @@
 
                 <ul class="list-unstyled components">
                     <mat-accordion>
-                        <mat-expansion-panel>
+                        <mat-expansion-panel Id = "Submenu">
                             <mat-expansion-panel-header>
                                 <mat-panel-title>
-                                    <i class="glyphicon glyphicon-home"></i>
+                                    <i id="Icon" class="glyphicon glyphicon-home"></i>
                                     Modul Contracte
                                 </mat-panel-title>
                             </mat-expansion-panel-header>
-                            <a href="#">
+                            <a  href="#">
                                 Contracte
                             </a>
                         </mat-expansion-panel>
-                        <mat-expansion-panel>
-                            <mat-expansion-panel-header>
+                        <mat-expansion-panel Id = "Submenu">
+                            <mat-expansion-panel-header >
                                 <mat-panel-title>
-                                    <i class="glyphicon glyphicon-briefcase"></i>
-                                    Facturi
+                                    <i id="Icon" class="glyphicon glyphicon-briefcase"></i>
+                                   Modul Facturi
                                 </mat-panel-title>
                             </mat-expansion-panel-header>
                             <a href="#">
                                 Facturi
                             </a>
                         </mat-expansion-panel>
-                        <mat-expansion-panel>
+                        <mat-expansion-panel Id = "Submenu">
                             <mat-expansion-panel-header>
                                 <mat-panel-title>
-                                    <i class="glyphicon glyphicon-euro"></i>
-                                    Financiar
+                                    <i id="Icon" class="glyphicon glyphicon-euro"></i>
+                                    Modul Financiar
                                 </mat-panel-title>
                             </mat-expansion-panel-header>
                             <a href="#">
                                 Financiar
                             </a>
                         </mat-expansion-panel>
-                        <mat-expansion-panel>
+                        <mat-expansion-panel Id = "Submenu">
                             <mat-expansion-panel-header>
                                 <mat-panel-title>
-                                    <i class="glyphicon glyphicon-duplicate"></i>
-                                    Stocuri
+                                    <i id="Icon" class="glyphicon glyphicon-duplicate"></i>
+                                    Modul Stocuri
                                 </mat-panel-title>
                             </mat-expansion-panel-header>
                             <a href="#">
                                 Stocuri
                             </a>
                         </mat-expansion-panel>
-                        <mat-expansion-panel>
+                        <mat-expansion-panel Id = "Submenu">
                             <mat-expansion-panel-header>
                                 <mat-panel-title>
-                                    <i class="glyphicon glyphicon-link"></i>
-                                    Nomenclatoare
+                                    <i id="Icon" class="glyphicon glyphicon-link"></i>
+                                   Nomenclatoare
                                 </mat-panel-title>
                             </mat-expansion-panel-header>
                             <a href="#">
                                 Nomenclatoare
                             </a>
                         </mat-expansion-panel>
-                        <mat-expansion-panel>
+                        <mat-expansion-panel Id = "Submenu">
                             <mat-expansion-panel-header>
                                 <mat-panel-title>
-                                    <i class="glyphicon glyphicon-paperclip"></i>
+                                    <i id="Icon" class="glyphicon glyphicon-paperclip"></i>
                                     Configurari
                                 </mat-panel-title>
                             </mat-expansion-panel-header>
@@ -91,10 +91,10 @@
                                 Configurari
                             </a>
                         </mat-expansion-panel>
-                        <mat-expansion-panel>
+                        <mat-expansion-panel Id = "Submenu">
                             <mat-expansion-panel-header>
                                 <mat-panel-title>
-                                    <i class="glyphicon glyphicon-equalizer"></i>
+                                    <i id="Icon" class="glyphicon glyphicon-equalizer"></i>
                                     Rapoarte
                                 </mat-panel-title>
                             </mat-expansion-panel-header>
