--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,7 +32,7 @@
                                     Modul Contracte
                                 </mat-panel-title>
                             </mat-expansion-panel-header>
-                            <a  href="#">
+                            <a routerLink="contract-list">
                                 Contracte
                             </a>
                         </mat-expansion-panel>
@@ -122,7 +122,7 @@
         </mat-toolbar>
 
 
-
+        <router-outlet></router-outlet>
     </mat-sidenav-content>
 
 
