--- a/src/app/contract-list/contract-list.component.css
+++ b/src/app/contract-list/contract-list.component.css
@@ -22,4 +22,7 @@
   .mat-header-cell.mat-sort-header-sorted {
     color: black;
   }
-  
+  .mat-row:hover {
+    background: rgb(179, 220, 235) !important;
+    color: black;
+  }
