router for child

--- a/src/app/contract-list/contract-list.component.html
+++ b/src/app/contract-list/contract-list.component.html
@@ -12,12 +12,12 @@
     <!-- Position Column -->
     <ng-container matColumnDef="PartnerName">
       <mat-header-cell *matHeaderCellDef mat-sort-header> Partner </mat-header-cell>
-    <mat-cell *matCellDef="let element"><a style="color:rgb(0, 0, 0);" href='#'> {{element.PartnerName}} </a> </mat-cell> 
+    <mat-cell *matCellDef="let element"><a style="color:rgb(0, 0, 0);" > {{element.PartnerName}} </a> </mat-cell> 
     </ng-container>
 
     <ng-container matColumnDef="NrContract">
       <mat-header-cell *matHeaderCellDef mat-sort-header> Nr. </mat-header-cell>
-    <mat-cell *matCellDef="let element"> <a style="color:rgb(0, 0, 0);" href='#'>{{element.NrContract}} </a></mat-cell> 
+    <mat-cell *matCellDef="let element"> <a style="color:rgb(0, 0, 0);">{{element.NrContract}} </a></mat-cell> 
     </ng-container>
 
     <!-- Name Column -->
@@ -53,12 +53,14 @@
     <mat-header-row *matHeaderRowDef="displayedColumns" ></mat-header-row>
     <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
   </mat-table>
+  <a routerLink="contract-general">test</a>
 
   <mat-paginator [length]="length"
                 [pageSize]="pageSize"
                 [pageSizeOptions]="pageSizeOptions"
                 (page)="pageEvent = $event">
   </mat-paginator>
+
   
   <!-- <div *ngIf="pageEvent">
     <h5>Page Change Event Properties</h5>
