--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,6 @@
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+@import "~bootstrap/dist/css/bootstrap.min.css";
+@import "~font-awesome/css/font-awesome.css";
 
 body { 
   font-family: Roboto, Arial, sans-serif;
