--- a/src/app/contract-general/contract-general.component.html
+++ b/src/app/contract-general/contract-general.component.html
@@ -1,5 +1,4 @@
 <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 
 <div class="panel-group" id="accordion">
@@ -18,3 +17,12 @@
       </div>
   </div>
 </div>
+
+<h2>This is a heading</h2>
+
+<p>This is a paragraph.</p>
+<p id="test">This is another paragraph.</p>
+<p>This is a paragraph.</p>
+<p id="test">This is another paragraph.</p>
+<p>This is a paragraph.</p>
+<p id="test">This is another paragraph.</p>
