--- a/src/app/contract-general/contract-general.component.html
+++ b/src/app/contract-general/contract-general.component.html
@@ -1,28 +1,5 @@
-<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-<script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+<br>
 
-<div class="panel-group" id="accordion">
-  <div class="panel panel-default">
-      <div class="panel-heading">
-          <h4 class="panel-title">
-              <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
-                  Collapsible Group Item #1
-              </a>
-          </h4>
-      </div>
-      <div id="collapseOne" class="panel-collapse collapse in">
-          <div class="panel-body">
-              Anim pariatur cliche reprehenderit
-          </div>
-      </div>
-  </div>
-</div>
-
-<h2>This is a heading</h2>
-
-<p>This is a paragraph.</p>
-<p id="test">This is another paragraph.</p>
-<p>This is a paragraph.</p>
-<p id="test">This is another paragraph.</p>
-<p>This is a paragraph.</p>
-<p id="test">This is another paragraph.</p>
+<textarea name="
+text" id="" cols="30" rows="10">Mai crapa ?</textarea>
+      
