--- a/src/app/contract-general/contract-general.component.css
+++ b/src/app/contract-general/contract-general.component.css
@@ -1,33 +1,34 @@
-.half-rule { 
-    height: 2px;
-    margin: 9px 0;
-    overflow: hidden;
-    background-color: #e5e5e5;
- }
 
- .example-form {
-    min-width: 350px;
-    max-width: 800px;
-    width: 100%;
-  }
-  
-  .example-full-width {
-    width: 100%;
-  }
-  
-  .example-container {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .example-container > * {
-    width: 100%;
-  }
-  
-  .mat-form-field {
-    width: 20%; 
-    padding-left: 20px;
-    padding-top: 20px;
-  }
+label{
+  text-align: left;
+}
 
+form {
+  height: 800px;
+}
+#container {
+  background-color: #ffffff;
+}
 
+  body {
+    background: black;
+  }
+  
+  .col-sm-1   {
+    height: 100px;
+    text-align: right;
+  }
+   .col-sm-2 {
+    height: 100px;
+    text-align: right;
+  }
+   .col-sm-5  {
+    height: 100px;
+    position:relative;
+    text-align:center;
+  }
+  .col-sm-4  {
+    height: 100px;
+    position:relative;
+    text-align:center;
+  }
