--- a/src/app/contract-general/contract-general.component.html
+++ b/src/app/contract-general/contract-general.component.html
@@ -268,10 +268,9 @@
 
         <div class="container-fluid">
                 <div class="row">
-                        <button class="btn-info">
+                        <button class="btn btn-primary">
                                 <span class="glyphicon glyphicon-chevron-left"></span>Inapoi</button>
-
-                        <button class="btn-success">
+                        <button class="btn btn-success ">
                                 Inainte
                                 <span class="glyphicon glyphicon-chevron-right"></span>
                         </button>
