--- a/src/app/contract-general/adauga-adrese/adauga-adrese.component.html
+++ b/src/app/contract-general/adauga-adrese/adauga-adrese.component.html
@@ -1,3 +1,14 @@
-<p>
-  adauga-adrese works!
-</p>
+<button type="button" class="btn btn-primary" (click)="openModal(template)">Create template modal</button>
+
+<ng-template #template>
+ <div class="modal-header">
+   <h4 class="modal-title pull-left">Modal</h4>
+   <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
+     <span aria-hidden="true">&times;</span>
+   </button>
+ </div>
+ <div class="modal-body">
+   This is a modal.
+   <input type="text" class="form-control" id="NrCtr" placeholder="Telefon. Responsabil Intern">
+ </div>
+</ng-template>
