--- a/src/app/contract-general/contract-general.component.html
+++ b/src/app/contract-general/contract-general.component.html
@@ -284,30 +284,7 @@
 
 <a style="color:rgb(0, 0, 0);" routerLink="adauga-adrese" > RutaNoua</a> 
         <!-- Trigger the modal with a button -->
-        <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Open Modal</button>
+<button type="button" class="btn btn-info btn-lg" data-toggle="modal" routerLink="adauga-adrese">Open Modal</button>
       
-        <!-- Modal -->
-        <div class="modal fade" id="myModal" role="dialog">
-          <div class="modal-dialog">
-          
-            <!-- Modal content-->
-            <div class="modal-content">
-              <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">Modal Header</h4>
-              </div>
-              <div class="modal-body">
-                <p>Some text in the modal.</p>
-                <div class="form-group">
-                  <label for="usr">Name:</label>
-                  <input type="text" class="form-control" id="usr">
-                </div>
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-              </div>
-            </div>
-            
-          </div>
-        </div>
+       
         
