--- a/src/app/contract-general/adauga-adrese/adauga-adrese.component.html
+++ b/src/app/contract-general/adauga-adrese/adauga-adrese.component.html
@@ -1,14 +1,45 @@
-<button type="button" class="btn btn-primary" (click)="openModal(template)">Create template modal</button>
+<button type="button" class="btn btn-primary" (click)="openModal(template)">Adauga Adresa</button>
 
 <ng-template #template>
  <div class="modal-header">
-   <h4 class="modal-title pull-left">Modal</h4>
+   <h4 class="modal-title pull-left">Introduceti Adresa</h4>
    <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
      <span aria-hidden="true">&times;</span>
    </button>
  </div>
  <div class="modal-body">
-   This is a modal.
-   <input type="text" class="form-control" id="NrCtr" placeholder="Telefon. Responsabil Intern">
- </div>
+
+  <div>
+    <label for="NrCtr">Tara</label>
+    <input type="text" class="form-control" id="NrCtr" placeholder="Tara">
+</div>
+<div>
+  <label for="NrCtr">Judet</label>
+  <input type="text" class="form-control" id="NrCtr" placeholder="Judet">
+</div>
+<div>
+  <label for="NrCtr">Oras</label>
+  <input type="text" class="form-control" id="NrCtr" placeholder="Oras">
+</div>
+<div>
+  <label for="NrCtr">Strada</label>
+  <input type="text" class="form-control" id="NrCtr" placeholder="Strada">
+</div>
+<div>
+  <label for="NrCtr">Numar</label>
+  <input type="text" class="form-control" id="NrCtr" placeholder="Numar">
+</div>
+  </div>
+
+  <div class="container-fluid">
+    <div class="row">
+            <button class="btn btn-primary">
+                    <span></span>Salveaza</button>
+            <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
+              <span aria-hidden="true">&times;</span>
+            </button>
+    </div>
+
+</div>
+
 </ng-template>
