--- a/src/app/modul-contracte/contract-general/contract-general.component.html
+++ b/src/app/modul-contracte/contract-general/contract-general.component.html
@@ -1,14 +1,15 @@
 <div >
   <tabset class="Tabs">
-    <tab heading="General" ></tab>
-    <tab heading="Financiar"></tab>
+    <tab heading="General"></tab>            
+    <tab heading="Financiar" routerLink="contract-financial"></tab>
     <tab heading="Documente"></tab>
     <tab heading="Task"></tab>
     <tab heading="Alerte"></tab>
     <tab heading="Istoric"></tab>
   </tabset>
 </div>
-
+<a style="color:rgb(0, 0, 0);" routerLink="contract-financial">fin</a>
+<a style="color:rgb(0, 0, 0);" routerLink="contract-alerts">alert</a>
 <form>
   <div class="container-fluid" id="container">
           <div class="row">
