--- a/src/app/modul-contracte/contract-general/contract-general.component.html
+++ b/src/app/modul-contracte/contract-general/contract-general.component.html
@@ -1,15 +1,12 @@
-<div >
-  <tabset class="Tabs">
-    <tab heading="General"></tab>            
-    <tab heading="Financiar" routerLink="contract-financial"></tab>
-    <tab heading="Documente"></tab>
-    <tab heading="Task"></tab>
-    <tab heading="Alerte"></tab>
-    <tab heading="Istoric"></tab>
-  </tabset>
-</div>
-<a style="color:rgb(0, 0, 0);" routerLink="contract-financial">fin</a>
-<a style="color:rgb(0, 0, 0);" routerLink="contract-alerts">alert</a>
+
+              <ul class="nav nav-pills">
+                        <li role="presentation" class="active"><a routerLink="contract-alerts"> General</a></li>
+                        <li role="presentation"><a routerLink="contract-financial">  Financiar</a></li>
+                        <li role="presentation"><a routerLink="contract-documents">Documente</a></li>
+                        <li role="presentation"><a routerLink="contract-tasks">Task</a></li>
+                        <li role="presentation"><a routerLink="contract-history">Istoric</a></li>
+                        <li role="presentation"><a routerLink="contract-alerts"> Alerte</a></li>
+                </ul>
 <form>
   <div class="container-fluid" id="container">
           <div class="row">
